Работали над ошибками

--- a/css/styless.css
+++ b/css/styless.css
@@ -16,7 +16,7 @@
         }
         
         .body {
-            font-family: var(--primary-font-family: 'Roboto');
+            font-family: var(--primary-font-family: 'Roboto'), sans-serif;
         }
         /*цвет основного текста #212121*/
         /*цвет вторичного текста #757575*/
@@ -33,126 +33,100 @@
         
         .logo {
             font-family: 'Raleway', sans-serif;
-            font-style: Bold;
             font-weight: 700;
             font-size: 26px;
             line-height: 1, 19;
-            letter-spacing: 3%;
+            letter-spacing: 0.03em;
             color: #2196F3;
         }
         
         .logo-accent {
             color: #212121;
             font-family: 'Raleway', sans-serif;
-            font-style: Bold;
             font-weight: 700;
             font-size: 26px;
             line-height: 1, 19;
-            letter-spacing: 3%;
+            letter-spacing: 0.03em;
         }
         
         .logo-accent-footer {
             color: #FFFFFF;
             font-family: 'Raleway', sans-serif;
-            font-style: Bold;
             font-weight: 700;
             font-size: 26px;
             line-height: 1, 19;
-            letter-spacing: 3%;
+            letter-spacing: 0.03em;
+        }
+        
+        .menu {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 1.14;
+            vertical-align: Top;
+            letter-spacing: 0.02em;
         }
         /*site-nav*/
         
         .site-nav {
             color: #212121;
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Medium;
-            Font-size: 14px;
-            Line-height: 1.14;
-            Align: Left;
-            Vertical-align: Top;
-            Letter-spacing: 2%;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 1.14;
+            text-align: left;
+            vertical-align: Top;
+            letter-spacing: 0.02em;
         }
         
         .site-nav:hover,
         .site-nav:focus {
             color: #2196F3;
         }
+        
+        .site-nav.current {
+            color: #2196F3;
+        }
         /*contact-nav*/
         
         .contact-nav {
             color: #212121;
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Medium;
+            font-weight: 500;
             font-size: 14px;
             line-height: 1.14;
-            align: Left;
+            text-align: Left;
             vertical-align: Top;
-            letter-spacing: 2%;
+            letter-spacing: 0.02em;
         }
         
         .contact-nav:hover,
         .contact-nav:focus {
             color: #2196F3;
         }
-        
-        .contact-info {
-            color: #FFFFFF;
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Regular;
-            font-size: 14px;
-            line-height: 1.71;
-            align: Left;
-            vertical-align: Top;
-            letter-spacing: 3%;
-        }
-        
-        .contact-info:hover,
-        .contact-info:focus {
-            color: #2196F3;
-        }
-        
-        .contact-info-item {
-            color: rgba(255, 255, 255, 0.6);
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Regular;
-            font-size: 14px;
-            line-height: 1.71;
-            align: Left;
-            vertical-align: Top;
-            letter-spacing: 3%;
-        }
-        
-        .contact-info-item:hover,
-        .contact-info-item:focus {
-            color: #2196F3;
-        }
         /*   hero  */
         
         .hero {
             color: #FFFFFF;
-            background-color: var(--primary-text-color-theme-dark)
+            background-color: var(--primary-text-color-theme-dark);
+            text-align: Center;
+            font-weight: 900;
         }
         
         .hero-title {
-            font-family: var(--primary-font-family: 'Roboto');
-            font-style: Black;
+            font-weight: 900;
             font-size: 44px;
             line-height: 1.36;
-            align: Center;
+            text-align: Center;
             vertical-align: Top;
-            letter-spacing: 6%;
+            letter-spacing: 0.06em;
         }
         
         .modal-btn {
             color: #FFFFFF;
             background-color: #2196F3;
-            font-family: var(--primary-font-family: 'Roboto');
-            font-style: Bold;
+            font-weight: 700;
             font-size: 16px;
             line-height: 1.87;
-            align: Center;
-            vertical-align: Center;
-            letter-spacing: 6%;
+            text-align: Center;
+            letter-spacing: 0.06em;
             cursor: pointer
         }
         
@@ -165,13 +139,12 @@
         .style-btn {
             background-color: #FFFFFF;
             color: #212121;
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Medium;
+            font-weight: 500;
             Font-size: 16px;
             Line-height: 1.62;
-            Align: Center;
+            text-align: Center;
             Vertical-align: Top;
-            Letter-spacing: 3%;
+            Letter-spacing: 0.03em;
             cursor: pointer
         }
         
@@ -179,6 +152,10 @@
         .style-btn:focus {
             color: #FFFFFF;
             background-color: #2196F3;
+        }
+        
+        .style-btn.current {
+            color: #2196F3;
         }
         /* section  */
         
@@ -195,57 +172,106 @@
         }
         
         .section-title {
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Bold;
+            font-weight: 700;
             Font-size: 36px;
             Line-height: 1.16;
-            Align: Center;
+            text-align: Center;
             Vertical-align: Top;
-            Letter-spacing: 3%;
+            Letter-spacing: 0.03em;
         }
         
         .feature-title {
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Bold;
+            font-weight: 700;
             Font-size: 14px;
             Line-height: 1.14;
-            Align: Left;
+            text-align: Left;
             Vertical-align: Top;
-            Letter-spacing: 3%;
+            Letter-spacing: 0.03em;
+        }
+        
+        .employees {
+            Vertical-align: Top;
+            Letter-spacing: 0.03em;
+        }
+        
+        .employees-name {
+            font-weight: 500;
+            Font-size: 16px;
+            Line-height: 1.18;
+            text-align: Center;
+            Vertical-align: Top;
+            Letter-spacing: 0.03em;
+        }
+        
+        .employees-position {
+            font-weight: 400;
+            Font-size: 16px;
+            Line-height: 1.18;
+            text-align: Center;
+            Vertical-align: Top;
+            Letter-spacing: 0.03em;
+            color: var(--title-color);
         }
         
         .text {
             color: var(--title-color);
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Regular;
+            font-weight: 400;
             Font-size: 14px;
             Line-height: 1.71;
-            Align: Left;
+            text-align: Left;
             Vertical-align: Top;
-            Letter-spacing: 3%;
+            Letter-spacing: 0.03em;
         }
         
         .section-works {
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Bold;
+            font-weight: 700;
             Font-size: 18px;
             Line-height: 2;
-            Align: Left;
+            text-align: Left;
             Vertical-align: Top;
-            Letter-spacing: 6%;
+            Letter-spacing: 0.06em;
         }
         
         .subtytle {
             color: var(--title-color);
-            font-family: var(--primary-font-family: 'Roboto');
-            Font-style: Regular;
+            font-weight: 400;
             Font-size: 16px;
             Line-height: 1.87;
-            Align: Left;
+            text-align: Left;
             Vertical-align: Top;
-            Letter-spacing: 3%;
+            Letter-spacing: 0.03em;
         }
         /*    FOOTER   */
+        
+        .contact-info {
+            color: #FFFFFF;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.71;
+            text-align: Left;
+            vertical-align: Top;
+            letter-spacing: 0.03em;
+        }
+        
+        .contact-info:hover,
+        .contact-info:focus {
+            color: #2196F3;
+        }
+        
+        .contact-info-item {
+            color: rgba(255, 255, 255, 0.6);
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.71;
+            text-align: Left;
+            vertical-align: Top;
+            letter-spacing: 0.03em;
+        }
+        
+        .contact-info-item:hover,
+        .contact-info-item:focus {
+            color: #2196F3;
+        }
         
         .footer {
             background-color: var(--primary-text-color-theme-dark);
